--- a/src/app/Guides/guides-list/guides-list.component.html
+++ b/src/app/Guides/guides-list/guides-list.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header  [guideCount]="guideCount"></app-header>
 
 <div class="guide-list-container">
   <div class="toolbar">
