--- a/src/app/Guides/edit-guide-form/edit-guide-form.component.html
+++ b/src/app/Guides/edit-guide-form/edit-guide-form.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header [title]="'שם מדריך: ' + guide.title"></app-header>
 
 <div class="body" dir="rtl">
   <form [formGroup]="editGuideForm" (ngSubmit)="submitGuide()">
@@ -26,7 +26,7 @@
         <!-- Conditional Rendering -->
         <div *ngIf="section.get('type')?.value === 'Text'" class="form-group">
           <label>Text Content:</label>
-          <textarea formControlName="textContent" class="form-control" placeholder="Enter text content"></textarea>
+          <angular-editor formControlName="textContent" [config]="editorConfig"></angular-editor>
         </div>
         
         <div *ngIf="section.get('type')?.value === 'Picture'" class="form-group">
